// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input without type renders a text input 1`] = `
<div
  className="form__input"
>
  <label
    className="form__label"
    htmlFor="test-input"
  >
    Test input
  </label>
  
  <input
    autoComplete="new-password"
    autoFocus={false}
    className="input"
    disabled={false}
    id="test-input"
    name="test-input"
    onFocus={[Function]}
    type="text"
  />
  
</div>
`;

exports[`Password prop creates a password input 1`] = `
<div
  className="form__input"
>
  <label
    className="form__label"
    htmlFor="test-password-input"
  >
    Password
  </label>
  
  <input
    autoComplete="new-password"
    autoFocus={false}
    className="input input--show-hide"
    disabled={false}
    id="test-password-input"
    name="test-password-input"
    onFocus={[Function]}
    type="password"
  />
  <span
    className="btn btn--password"
    onClick={[Function]}
    onKeyPress={[Function]}
    role="button"
    tabIndex="0"
  >
    Show
  </span>
</div>
`;
